UR Pixel Studio

--- a/index.html
+++ b/index.html
@@ -4,14 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UR Pixel Studio</title>
-    <meta name="description" content=" Project " />
-    <meta property="og:image" content="public/1.png" />
 
+    <!-- 🔥 Favicon -->
+    <link rel="icon" type="image/png" href="/1.png" />
+
+    <!-- 🧠 SEO & Meta -->
+    <meta name="description" content="Professional photography portfolio for UR Pixel Studio" />
+
+    <!-- 🔗 Social Sharing (Open Graph) -->
     <meta property="og:title" content="UR Pixel Studio" />
     <meta property="og:description" content="Lovable Generated Project" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="public/1.png" />
-
+    <meta property="og:image" content="/1.png" />
+    <meta property="og:url" content="http://localhost:8080" />
   </head>
 
   <body>
